--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
 
 
     <ImageView
-        android:id="@+id/shop_main"
+        android:id="@+id/shop_charIv"
         android:layout_width="311dp"
         android:layout_height="262dp"
-        android:src="@drawable/char1_wp_1"
+        android:src="@drawable/char1_wp_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.098" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/shop_petIv"
         android:layout_width="97dp"
         android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,22 +30,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.321"
-        app:srcCompat="@drawable/pet1" />
+        app:srcCompat="@drawable/pet2" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/shop_closeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/point"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.042"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02"
+        app:layout_constraintVertical_bias="0.01"
         app:srcCompat="@android:drawable/btn_dialog" />
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="55dp"
         android:layout_height="30dp"
         android:text="Point:"
@@ -59,7 +60,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/point"
+        android:id="@+id/shop_pointTv"
         android:layout_width="80dp"
         android:layout_height="43dp"
         android:text="10000"
@@ -73,12 +74,13 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <GridView
-        android:id="@+id/shopGridView"
+        android:id="@+id/shop_GridView"
         android:layout_width="419dp"
         android:layout_height="381dp"
         android:layout_gravity="center"
-        android:background="#6C6871"
+        android:background="#526C80"
         android:numColumns="3"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
