--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,38 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper"
+    android:background="#E9EDC3"
 
     tools:context=".MainActivity">
 
 
     <ImageView
         android:id="@+id/shop_charIv"
-        android:layout_width="311dp"
-        android:layout_height="262dp"
-        android:src="@drawable/char1_wp_2"
+        android:layout_width="104dp"
+        android:layout_height="165dp"
+        android:src="@drawable/people"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.098" />
 
-    <ImageView
-        android:id="@+id/shop_petIv"
-        android:layout_width="97dp"
-        android:layout_height="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.159"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.321"
-        app:srcCompat="@drawable/pet2" />
 
     <ImageButton
         android:id="@+id/shop_closeBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="33dp"
+        android:layout_height="36dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,28 +33,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01"
-        app:srcCompat="@android:drawable/btn_dialog" />
+        android:background="@drawable/ic_baseline_close_24"/>
 
     <TextView
-        android:layout_width="55dp"
-        android:layout_height="30dp"
+        android:layout_width="65dp"
+        android:layout_height="26dp"
+        android:fontFamily="@font/maplestorybold"
         android:text="Point:"
-        android:textSize="15dp"
-        android:textColor="#ffffff"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.713"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.024" />
 
     <TextView
         android:id="@+id/shop_pointTv"
-        android:layout_width="80dp"
-        android:layout_height="43dp"
+        android:layout_width="99dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/maplestorybold"
         android:text="10000"
-        android:textColor="#ffffff"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -75,10 +64,10 @@
 
     <GridView
         android:id="@+id/shop_GridView"
-        android:layout_width="0dp"
-        android:layout_height="381dp"
+        android:layout_width="412dp"
+        android:layout_height="457dp"
         android:layout_gravity="center"
-        android:background="#526C80"
+        android:background="#E6E1B4"
         android:numColumns="3"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
