--- a/app/src/main/res/layout/shop_list_dialog.xml
+++ b/app/src/main/res/layout/shop_list_dialog.xml
@@ -1,17 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
-
-    <ImageView
-        android:id="@+id/shopListImage"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <LinearLayout
+        android:layout_width="320dp"
+        android:layout_height="220dp"
         android:layout_marginLeft="30dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/question" />
+        android:gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/shopListImage"
+            android:layout_width="160dp"
+            android:layout_height="220dp"
+            android:layout_marginEnd="30dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/question"
+            android:layout_marginRight="30dp"
+            tools:ignore="RtlCompat" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/maplestorybold"
+            android:layout_marginLeft="60dp"
+            android:text="능력:"
+            android:textSize="25dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/shopabilty"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/maplestorybold"
+            android:layout_marginLeft="5dp"
+            android:gravity="left"
+            android:text="공격 20%증가 "
+            android:textSize="25dp" />
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="300dp"
@@ -27,6 +63,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
         android:orientation="horizontal">
+
 
         <TextView
             android:id="@+id/shopListPrice"
