--- a/app/src/main/res/layout/shop_list_image.xml
+++ b/app/src/main/res/layout/shop_list_image.xml
@@ -8,20 +8,20 @@
     android:orientation="vertical">
 
     <LinearLayout
-
-        android:layout_width="120dp"
-        android:layout_height="160dp"
+        android:layout_width="110dp"
+        android:layout_height="140dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/shopListImage"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_width="110dp"
+            android:layout_height="120dp"
+            android:scaleType="fitXY"
             android:src="@drawable/question" />
 
         <TextView
             android:id="@+id/shopListTV"
-            android:layout_width="116dp"
+            android:layout_width="110dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:background="#B1A7A7"
