--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,83 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E9EDC3"
-
+    android:orientation="vertical"
+    android:paddingLeft="8dp"
+    android:paddingTop="8dp"
+    android:paddingRight="8dp"
+    android:paddingBottom="8dp"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/shop_charIv"
-        android:layout_width="121dp"
-        android:layout_height="195dp"
-        android:src="@drawable/people"
+        <Button
+            android:id="@+id/main_my_btn"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="20dp"
+            android:text="MY" />
 
-        app:layout_constraintBottom_toTopOf="@+id/shop_GridView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.756" />
+        <Button
+            android:id="@+id/main_shop_btn"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="120dp"
+            android:text="SHOP" />
+        <Button
+            android:id="@+id/main_setting_btn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:text="SETTING" />
 
-    <ImageButton
-        android:id="@+id/shop_closeBtn"
-        android:layout_width="33dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01"
-        android:background="@drawable/ic_baseline_close_24"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="65dp"
-        android:layout_height="26dp"
-        android:fontFamily="@font/maplestorybold"
-        android:text="Point:"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/shop_pointTv"
-        app:layout_constraintHorizontal_bias="0.961"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.025" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/shop_pointTv"
-        android:layout_width="89dp"
-        android:layout_height="25dp"
-        android:fontFamily="@font/maplestorybold"
-        android:text="10000"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+                <Button
+                    android:id="@+id/main_stage1_1"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="100dp"
+                    android:background="@drawable/button_map"
+                    android:text="1" />
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.025" />
+                <Button
+                    android:id="@+id/main_stage1_2"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="230dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="2" />
 
-    <GridView
-        android:id="@+id/shop_GridView"
-        android:layout_width="362dp"
-        android:layout_height="453dp"
-        android:layout_gravity="center"
-        android:background="#E6E1B4"
-        android:numColumns="3"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="parent"
+                <Button
+                    android:id="@+id/main_stage1_3"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="3" />
 
-        app:layout_constraintVertical_bias="1.0" />
+                <Button
+                    android:id="@+id/main_stage1_4"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="230dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="4" />
 
+                <Button
+                    android:id="@+id/main_stage1_5"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="5" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <Button
+                    android:id="@+id/main_stage1_6"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="230dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="6" />
 
+                <Button
+                    android:id="@+id/main_stage1_7"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="7" />
+
+                <Button
+                    android:id="@+id/main_stage1_8"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="230dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="8" />
+
+                <Button
+                    android:id="@+id/main_stage1_9"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_map"
+                    android:text="9" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+        <Button
+            android:id="@+id/main_training_btn"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_gravity="bottom|right"
+            android:text="TRAINING" />
+
+    </FrameLayout>
+
+</LinearLayout>
