--- a/app/src/main/res/layout/battle.xml
+++ b/app/src/main/res/layout/battle.xml
@@ -111,5 +111,15 @@
             android:textColor="#00A3E1"
             android:textSize="40dp"
             android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textTest"
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:text="TextView"
+            android:textColor="#00A3E1"
+            android:textSize="40dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
