--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -16,7 +16,7 @@
             android:layout_width="140dp"
             android:layout_height="230dp"
             android:layout_marginRight="20dp"
-            app:srcCompat="@drawable/people" />
+            app:srcCompat="@drawable/player_0_0_0" />
         <LinearLayout
             android:layout_width="80dp"
             android:layout_height="220dp"
